# robot_collector

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  package.xml
Docs/html/: annotated.html  classCollector-members.html  classCollector.html  classCollectorRos-members.html  classCollectorRos.html  classDetector-members.html  classDetector.html  classDetectorRos-members.html  classDetectorRos.html  classes.html  classmodelHandling-members.html  classmodelHandling.html  classmodelHandlingRos-members.html  classmodelHandlingRos.html  classrandCoord-members.html  classrandCoord.html  classwalkRobot-members.html  classwalkRobot.html  classwalkRobotRos-members.html  classwalkRobotRos.html  classwalkRobotRos__coll__graph.map  classwalkRobotRos__coll__graph.md5  collector_8cpp.html  collector_8cpp__incl.map  collector_8cpp__incl.md5  collector_8hpp.html  collector_8hpp__dep__incl.map  collector_8hpp__dep__incl.md5  collector_8hpp__incl.map  collector_8hpp__incl.md5  collector_8hpp_source.html  collector__ros_8cpp.html  collector__ros_8cpp__incl.map  collector__ros_8cpp__incl.md5  collector__ros_8hpp.html  collector__ros_8hpp__dep__incl.map  collector__ros_8hpp__dep__incl.md5  collector__ros_8hpp__incl.map  collector__ros_8hpp__incl.md5  collector__ros_8hpp_source.html  (+78 more)
Docs/html/search/: all_0.js  all_1.js  all_2.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js
Docs/latex/: annotated.tex  classCollector.tex  classCollectorRos.tex  classDetector.tex  classDetectorRos.tex  classmodelHandling.tex  classmodelHandlingRos.tex  classrandCoord.tex  classwalkRobot.tex  classwalkRobotRos.tex  classwalkRobotRos__coll__graph.md5  collector_8cpp.tex  collector_8cpp__incl.md5  collector_8hpp.tex  collector_8hpp__dep__incl.md5  collector_8hpp__incl.md5  collector__ros_8cpp.tex  collector__ros_8cpp__incl.md5  collector__ros_8hpp.tex  collector__ros_8hpp__dep__incl.md5  collector__ros_8hpp__incl.md5  collector__test_8cpp.tex  collector__test_8cpp__incl.md5  detector_8cpp.tex  detector_8cpp__incl.md5  detector_8hpp.tex  detector_8hpp__dep__incl.md5  detector_8hpp__incl.md5  detector__ros_8cpp.tex  detector__ros_8cpp__incl.md5  detector__ros_8hpp.tex  detector__ros_8hpp__dep__incl.md5  detector__ros_8hpp__incl.md5  detector__ros__test_8cpp.tex  detector__ros__test_8cpp__incl.md5  detector__test_8cpp.tex  detector__test_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  (+23 more)
World/: Map_collector  map  map_new  my_map.pgm
World/models/ar_block/: model.sdf
World/models/ar_block0/: model.config  model.sdf
World/models/ar_block0/materials/scripts/: ar_block.material
World/models/ar_block1/: model.config  model.sdf
World/models/ar_block1/materials/scripts/: ar_block.material
World/models/ar_block2/: model.config  model.sdf
World/models/ar_block2/materials/scripts/: ar_block.material
World/models/ar_block3/: model.config  model.sdf
World/models/ar_block3/materials/scripts/: ar_block.material
include/: collector.hpp  collector_ros.hpp  detector_ros.hpp  modelHandling.hpp  modelHandlingRos.hpp  randCoord.hpp  walkRobot.hpp  walkRobotRos.hpp
launch/: robot_collector.launch
param/: costmap_common_params.yaml
results/: cppcheckOutput.txt  cpplintOutput.txt
src/: collector.cpp  collector_ros.cpp  detector.cpp  detector_ros.cpp  main.cpp  modelHandling.cpp  modelHandlingRos.cpp  randCoord.cpp  walkRobot.cpp  walkRobotRos.cpp
test/: collector_test.cpp  detector_ros_test.cpp  detector_test.cpp  main.cpp  modelHandlingRos_test.cpp  modelHandling_test.cpp  randCoord_test.cpp  test.launch  walkRobotRos_test.cpp  walkRobot_test.cpp
