<?xml version="1.0"?>
<package format="2">
  <name>robot_collector</name>
  <version>0.0.0</version>
  <description>The robot_collector package</description>

 
  <maintainer email="andrelgferreira1@gmail.com">Andre</maintainer>
  <maintainer email="psanhuez@umd.edu">Pablo</maintainer>
  <maintainer email="ryanc1934@gmail.com">Ryan</maintainer>

 
  <license>MPL 2.0</license>


  
  <url type="website">https://github.com/sanhuezapablo/robot_collector</url> 


 
  <author email="andrelgferreira1@gmail.com">Andre</author> 
  <author email="psanhuez@umd.edu">Pablo</author> 
  <author email="ryanc1934@gmail.com">Ryan</author> 


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
